Archive/e44362e5821d5ab4872da459a5437529-278b7013047f1a63d0fb39b76837f267/output
+ g++ main.cpp -o main
main.cpp: In function ‘int main()’:
main.cpp:11:14: error: ‘r’ does not name a type
         auto r = *f;
              ^
main.cpp:12:17: error: ‘r’ was not declared in this scope
         reverse(r.begin(), r.end());
                 ^
